# spotify-control

./: Cargo.toml  LICENCE  README.md
src/: main.rs
