[package]
name = "spotify-control"
version = "1.1.0"
edition = "2021"
description = "Control Spotify from the command line"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
dbus = "0.9.5"
notify-rust = "4.5.8"
serde = { version = "1.0.137", features = ["derive"] }
temp-file = "0.1.7"
ureq = { version = "2.4.0", features = ["json"] }

