[package]
name = "spotify-control"
version = "1.1.0"
edition = "2021"
description = "Control Spotify from the command line"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
notify-rust = "4.5.8"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
temp-file = "0.1.7"
tokio = { version = "1.19.2", features = ["full"] }
zbus = { version = "2.3.2", default-features = false, features = ["tokio"] }

